researching questions page

--- a/expert/templates/expert/layouts/base_layout.html
+++ b/expert/templates/expert/layouts/base_layout.html
@@ -78,7 +78,7 @@
         <li class="list-group-item text-right">
           <a href="#">
             <div>
-              <span>طرح سوال</span>
+              <span>سوالات پژوهشی</span>
               <span class="fas fa-question"></span>
             </div>
           </a>
