--- a/expert/templates/expert/userInfo.html
+++ b/expert/templates/expert/userInfo.html
@@ -332,34 +332,34 @@
                             <div class="col-lg-12 text-right">
                                 <span class="sub-header">در حال حاضر،چه تعداد دانشجو تحت نظر شما، در حال انجام فعالیت های پژوهشی هستند؟</span>
                                 <div class="row">
-                                    <div class="col-lg-3">
+                                    <div class="col-lg-3 col-md-3 col-6">
                                         <input type="radio" id="student_num0" name="student_num" value="1-10" class="label-check-radio">
                                         <label for="student_num0">1 تا 10 نفر</label>
                                     </div>
-                                    <div class="col-lg-3">
-                                        <input type="radio" id="student_num1" name="student_num" value="1-10" class="label-check-radio">
+                                    <div class="col-lg-3 col-md-3 col-6">
+                                        <input type="radio" id="student_num1" name="student_num" value="11-30" class="label-check-radio">
                                         <label for="student_num1">11 تا 30 نفر</label>
                                     </div>
-                                    <div class="col-lg-3">
-                                        <input type="radio" id="student_num2" name="student_num" value="1-10" class="label-check-radio">
+                                    <div class="col-lg-3 col-md-3 col-6">
+                                        <input type="radio" id="student_num2" name="student_num" value="31-60" class="label-check-radio">
                                         <label for="student_num2">31 تا 60 نفر</label>
                                     </div>
-                                    <div class="col-lg-3">
-                                        <input type="radio" id="student_num3" name="student_num" value="1-10" class="label-check-radio">
+                                    <div class="col-lg-3 col-md-3 col-6">
+                                        <input type="radio" id="student_num3" name="student_num" value=">60" class="label-check-radio">
                                         <label for="student_num3">بیش از 60 نفر</label>
                                     </div>
                                 </div>
                             </div>
                         </div>
                         <div class="row">
-                            <div class="col-lg-8 text-right">
+                            <div class="col-lg-8 col-md-12 col-12 text-right">
                                 <span class="sub-header" style="top: 10px;position: relative;">آیا تا به حال با شرکت های خارج دانشگاه قرارداد پژوهشی داشته اید؟</span>
                             </div>
-                            <div class="col-lg-2">
+                            <div class="col-lg-2 col-md-6 col-6 text-center">
                                 <input type="radio" id="foreign_yes" name="foreign_work" value="1-10" class="label-check-radio">
                                 <label for="foreign_yes">آری</label>
                             </div>
-                            <div class="col-lg-2">
+                            <div class="col-lg-2 col-md-6 col-6 text-center">
                                 <input type="radio" id="foreign_no" name="foreign_work" value="1-10" class="label-check-radio">
                                 <label for="foreign_no">خیر</label>
                             </div>
