--- a/expert/templates/expert/index.html
+++ b/expert/templates/expert/index.html
@@ -4,7 +4,7 @@
 {% block title %}پروژه ها{% endblock %}
 
 {% block initial_information %}
-{#    {% include 'expert/layouts/initial_information.html' %}#}
+    {% include 'expert/layouts/initial_information.html' %}
 {% endblock %}
 
 {% block name %} دکتر احسان شریف{% endblock %}
