--- a/industry/templates/industry/layouts/initial_information.html
+++ b/industry/templates/industry/layouts/initial_information.html
@@ -69,7 +69,7 @@
             </div>
           </div>
         </div>
-        <button type="button" class="form-submit">ثبت اطلاعات</button>
+        <button type="submit" class="form-submit">ثبت اطلاعات</button>
       </form>
     </div>
   </div>
