--- a/industry/templates/industry/layouts/initial_information.html
+++ b/industry/templates/industry/layouts/initial_information.html
@@ -23,20 +23,20 @@
                     <div class="row">
                         <div class="col-lg-12">
                             <label for="id_name">نام شرکت</label>
-{#                            <input type="text" id="firmName" class="w-100" value="{% if form.name.value %}{{ form.name.value }}{%  endif %}">#}
                             {% render_field form.name class+="w-100" %}
+                            {% render_field form.name.errors %}
                         </div>
                     </div>
                     <div class="row">
                         <div class="col-lg-6">
                             <label for="id_registration_number">شماره ثبت</label>
-{#                            <input type="text" id="registerNum" class="w-100">#}
                             {% render_field form.registration_number class+="w-100" %}
+                            {% render_field form.registration_number.errors %}
                         </div>
                         <div class="col-lg-6">
                             <label for="id_date_of_foundation">سال تاسیس</label>
-{#                            <input type="text" id="establishmentDate" class="w-100">#}
                             {% render_field form.date_of_foundation class+="w-100" %}
+                            {% render_field form.date_of_foundation.errors %}
                         </div>
                     </div>
                 </div>
@@ -44,8 +44,8 @@
                     <div class="row">
                         <div class="col-lg-12">
                             <label for="id_research_field">حوزه فعالیت</label>
-{#                            <input type="text" id="Field" class="w-100">#}
                             {% render_field form.research_field class+="w-100" %}
+                            {% render_field form.research_field.errors %}
                         </div>
                     </div>
                     <div class="row">
@@ -56,35 +56,31 @@
                                 <option value="1">دولتی</option>
                                 <option value="2">خصوصی</option>
                             </select>
+                            {% render_field form.industry_type.errors %}
                         </div>
                     </div>
                     <div class="row">
                         <div class="col-lg-12">
                             <label for="id_industry_address">نشانی</label>
-{#                            <textarea dir="rtl" rows="3" class="w-100" id="Address"></textarea>#}
                             {% render_field form.industry_address class+="w-100" rows="3" dir="rtl" %}
+                            {% render_field form.industry_address.errors %}
                         </div>
                     </div>
                     <div class="row">
                         <div class="col-lg-6">
                             <label for="id_phone_number">تلفن</label>
-{#                            <input type="text" id="phoneNum" class="w-100">#}
                             {% render_field form.phone_number class+="w-100" %}
+                            {% render_field form.phone_number.errors %}
                         </div>
                         <div class="col-lg-6">
                             <label for="id_email_address">پست الکترونیکی</label>
-{#                            <input type="text" id="Email" class="w-100">#}
                             {% render_field form.email_address class+="w-100" %}
+                            {% render_field form.email_address.errors %}
                         </div>
                     </div>
                 </div>
             </div>
-{#            <button type="submit" class="form-submit">ثبت اطلاعات</button>#}
             <input type="submit" class="form-submit" value="ثبت اطلاعات"/>
         </form>
-{#    to be changed later !!! #}
-        {%  if form.errors %}
-            {{ form.errors }}
-        {% endif %}
     </div>
 </div>
