--- a/expert/templates/expert/layouts/initial_information.html
+++ b/expert/templates/expert/layouts/initial_information.html
@@ -1,93 +1,96 @@
-{% load static %}
-<div class="mainInfo-body">
-    <div class="card mainInfo text-right">
-      <span dir="rtl">سلام Brown ،به <span class="green">چمران</span><span class="red">تیم</span> خوش آمدید!</span>
-      <p dir="rtl">چمران تیم برای فعال سازی حساب کاربری شما به اطلاعات کاربری ذیل نیازمند است، لذا خواهشمند است اطلاعات زیر را به دقت تکمیل نمایید.</p>
-      <hr>
-      <form action="" method="post">
-          {% csrf_token %}
-        <div class="row">
-            <div class="col-lg-6">
+{% load static%}
+<div class="fixed-back initial-information" style="display: block">
+    <div class="card text-right">
+        <div class="card-head">اطلاعات اولیه</div>
+        <div class="container">
+            <form action="" method="post">
+                {% csrf_token %}
             <div class="row">
-              <div class="col-lg-12 text-center">
-                <label for="upload-input" class="upload text-center">
-                    <i class="fas fa-pencil-alt"></i>
-                </label>
-                <img src="{% static 'expert/img/profile.jpg' %}" alt="profile" class="profile" width="150px" height="150px">
-                <input type="file" id="upload-input" accept="image/png, image/jpeg">
-              </div>
-            </div>
-            <div class="row">
-                <div class="col-lg-6">
-                    <label for="FirstName">نام</label>
-                    <input type="text" id="FirstName" class="w-100">
+                <div class="col-lg-12">
+                    <div class="row">
+                      <div class="col-lg-12 text-center">
+                        <label for="upload-input" class="upload text-center">
+                            <i class="fas fa-pencil-alt"></i>
+                        </label>
+                        <img src="{% static 'expert/img/profile.jpg' %}" alt="profile" class="profile" width="150px" height="150px">
+                        <input type="file" id="upload-input" accept="image/png, image/jpeg">
+                      </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-lg-6">
+{#for adding error add class "error" to input or textarea then add following div after that#}
+                            <label for="FirstName">نام</label>
+                            <input type="text" id="FirstName" class="w-100 error">
+                            <div class="error">
+                                <span>*</span>
+                                <span class="error-body">Error Body</span>
+                            </div>
+                        </div>
+                        <div class="col-lg-6">
+                            <label for="LastName">نام خانوادگی</label>
+                            <input type="text" id="LastName" class="w-100">
+                      </div>
+                    </div>
+                    <div class="row">
+                      <div class="col-lg-12">
+                        <label for="Field">حوزه تخصصی</label>
+                        <input type="text" id="Field" class="w-100">
+                      </div>
+                    </div>
+                    <div class="row">
+                      <div class="col-lg-12">
+                        <label for="MelliCode">کد ملی</label>
+                        <input type="text" id="MelliCode" class="w-100">
+                      </div>
+                    </div>
+                    <div class="row">
+                      <div class="col-lg-12 rankDiv">
+                          <label class="rankLabel" for="rank">مرتبه علمی</label>
+                          <select id="rank">
+                              <option selected dir="rtl">انتخاب کنید ...</option>
+                              <option value="1">مربی</option>
+                              <option value="2">استادیار</option>
+                              <option value="3">دانشیار</option>
+                              <option value="4">استاد</option>
+                              <option value="5">استاد تمام</option>
+                              <option value="6">پژوهشگر</option>
+                          </select>
+                      </div>
+                    </div>
+                    <div class="row">
+                          <div class="col-lg-12">
+                              <label for="Uni">دانشگاه محل فعالیت</label>
+                              <input type="text" id="Uni" class="w-100">
+                          </div>
+                      </div>
+                    <div class="row">
+                      <div class="col-lg-12">
+                        <label for="Address">آدرس</label>
+                        <textarea dir="rtl" rows="3" class="w-100" id="Address"></textarea>
+                      </div>
+                    </div>
+                    <div class="row">
+                      <div class="col-lg-6">
+                        <label for="HomeNum">تلفن منزل</label>
+                        <input type="text" id="HomeNum" class="w-100">
+                      </div>
+                      <div class="col-lg-6">
+                        <label for="PhoneNum">تلفن همراه</label>
+                        <input type="text" id="PhoneNum" class="w-100">
+                      </div>
+                    </div>
+                    <div class="row">
+                      <div class="col-lg-12">
+                        <label for="Email">پست الکترونیکی</label>
+                        <input type="text" id="Email" class="w-100">
+                      </div>
+                    </div>
                 </div>
-                <div class="col-lg-6">
-                    <label for="LastName">نام خانوادگی</label>
-                    <input type="text" id="LastName" class="w-100">
-              </div>
             </div>
-            <div class="row">
-              <div class="col-lg-12">
-                <label for="Field">حوزه تخصصی</label>
-                <input type="text" id="Field" class="w-100">
-              </div>
+            <div class="card-footer">
+                <button class="save-btn" type="submit">ذخیره</button>
             </div>
-            <div class="row">
-              <div class="col-lg-12">
-                <label for="MelliCode">کد ملی</label>
-                <input type="text" id="MelliCode" class="w-100">
-              </div>
-            </div>
-            <div class="row">
-              <div class="col-lg-12 rankDiv">
-                  <label class="rankLabel" for="rank">مرتبه علمی</label>
-                  <select id="rank">
-                      <option selected dir="rtl">انتخاب کنید ...</option>
-                      <option value="1">مربی</option>
-                      <option value="2">استادیار</option>
-                      <option value="3">دانشیار</option>
-                      <option value="4">استاد</option>
-                      <option value="5">استاد تمام</option>
-                      <option value="6">پژوهشگر</option>
-                  </select>
-              </div>
-            </div>
-          </div>
-            <div class="col-lg-6">
-            <div class="row">
-              <div class="col-lg-12">
-                <label for="Uni">دانشگاه محل فعالیت</label>
-                <input type="text" id="Uni" class="w-100">
-                <i class="fas fa-plus fa-lg"></i>
-                <div class="selected_uni"></div>
-              </div>
-            </div>
-            <div class="row">
-              <div class="col-lg-12">
-                <label for="Address">آدرس</label>
-                <textarea dir="rtl" rows="3" class="w-100" id="Address"></textarea>
-              </div>
-            </div>
-            <div class="row">
-              <div class="col-lg-6">
-                <label for="HomeNum">تلفن منزل</label>
-                <input type="text" id="HomeNum" class="w-100">
-              </div>
-              <div class="col-lg-6">
-                <label for="PhoneNum">تلفن همراه</label>
-                <input type="text" id="PhoneNum" class="w-100">
-              </div>
-            </div>
-            <div class="row">
-              <div class="col-lg-12">
-                <label for="Email">پست الکترونیکی</label>
-                <input type="text" id="Email" class="w-100">
-              </div>
-            </div>
-          </div>
-        </div>
-        <button type="button" class="form-submit">ثبت اطلاعات</button>
       </form>
+        </div>
     </div>
-  </div>
+</div>
