--- a/industry/templates/industry/index.html
+++ b/industry/templates/industry/index.html
@@ -3,9 +3,9 @@
 {% block title %}پروژه ها{% endblock %}
 
 {% block initial_information %}
-    {% if user.industry_user.first_login %}
+{#    {% if user.industryuser.first_login %}#}
         {% include 'industry/layouts/initial_information.html' %}
-    {% endif %}
+{#    {% endif %}#}
 {% endblock %}
 {% block dialog%}
     {% include 'industry/layouts/showProject.html' %}
