Industry Initial Information
* changed button type from 'button' to 'submit'

* reformatted form fields with widget_tweaks tags

* added errors for the form fields. Styling the fields rendered with {% render_field %} is just like html.(See line 65 as an example)

* added first_login field to the IndustryUser model

* changed user's related_name in IndustryUser to avoid refactoring the whole code base

* first_login is set to false after the first successful initial information submission

* fixed some bugs in initial information form validation

* deleted unnecessary Meta class

* added if condition for showing the initial information form

* changed user.industry_user to user.industryuser at line 6

--- a/industry/templates/industry/index.html
+++ b/industry/templates/industry/index.html
@@ -3,7 +3,9 @@
 {% block title %}پروژه ها{% endblock %}
 
 {% block initial_information %}
-{#    {% include 'industry/layouts/initial_information.html' %}#}
+{#    {% if user.industryuser.first_login %}#}
+        {% include 'industry/layouts/initial_information.html' %}
+{#    {% endif %}#}
 {% endblock %}
 {% block dialog%}
     {% include 'industry/layouts/showProject.html' %}
