--- a/industry/templates/industry/layouts/base_layout.html
+++ b/industry/templates/industry/layouts/base_layout.html
@@ -14,7 +14,7 @@
   </head>
   <body>
   {% block dialog%}{% endblock %}
-  <div class="main">
+  <div class="main blur-div">
     <div class="top-bar">
       <div class="top-msg">
         <span class="fas fa-envelope fa-lg"></span>
