--- a/researcher/templates/researcher/layouts/base_layout.html
+++ b/researcher/templates/researcher/layouts/base_layout.html
@@ -14,7 +14,7 @@
   </head>
   <body>
   {% block dialog%}{% endblock %}
-  <div class="main">
+  <div class="main blur-div">
     <div class="top-bar">
       <div class="top-msg">
         <span class="fas fa-envelope fa-lg"></span>
@@ -34,7 +34,6 @@
     </div>
     <div class="content">
         <div class="container">
-            {% block initial_information %}{% endblock %}
             {% block content %}{% endblock %}
         </div>
     </div>
