--- a/industry/templates/industry/layouts/initial_information.html
+++ b/industry/templates/industry/layouts/initial_information.html
@@ -1,86 +1,85 @@
 {% load static %}
 {% load widget_tweaks %}
-<div class="mainInfo-body" style="display:block">
-    <div class="card mainInfo text-right">
-        <span dir="rtl">سلام Brown ،به <span class="green">چمران</span><span class="red">تیم</span> خوش آمدید!</span>
-        <p dir="rtl">چمران تیم برای فعال سازی حساب کاربری شما به اطلاعات کاربری ذیل نیازمند است، لذا خواهشمند است
-            اطلاعات زیر را به دقت تکمیل نمایید.</p>
-        <hr>
-        <form enctype="multipart/form-data" method="post" action="">
-            {% csrf_token %}
-            <div class="row">
-                <div class="col-lg-6">
-                    <div class="row">
-                        <div class="col-lg-12 text-center">
-                            <label for="upload-input" class="upload text-center">
-                                <i class="fas fa-pencil-alt"></i>
-                            </label>
-                            <img src="{% static 'industry/img/profile.jpg' %}" alt="profile" class="profile"
-                                 width="150px" height="150px">
-                            <input type="file" id="upload-input" accept="image/png, image/jpeg">
-                        </div>
-                    </div>
+<div class="fixed-back initial-information" style="display: block">
+    <div class="card text-right">
+        <div class="card-head">اطلاعات اولیه</div>
+            <div class="container">
+                <form enctype="multipart/form-data" method="post" action="">
+                    {% csrf_token %}
                     <div class="row">
                         <div class="col-lg-12">
-                            <label for="id_name">نام شرکت</label>
-                            {% render_field form.name class+="w-100" %}
-                            {% render_field form.name.errors %}
+                            <div class="row">
+                                <div class="col-lg-12 text-center">
+                                    <label for="upload-input" class="upload text-center">
+                                        <i class="fas fa-pencil-alt"></i>
+                                    </label>
+                                    <img src="{% static 'industry/img/profile.jpg' %}" alt="profile" class="profile"
+                                         width="150px" height="150px">
+                                    <input type="file" id="upload-input" accept="image/png, image/jpeg">
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-lg-12">
+                                    <label for="id_name">نام شرکت</label>
+                                    {% render_field form.name class+="w-100" %}
+                                    {% render_field form.name.errors %}
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-lg-6">
+                                    <label for="id_registration_number">شماره ثبت</label>
+                                    {% render_field form.registration_number class+="w-100" %}
+                                    {% render_field form.registration_number.errors %}
+                                </div>
+                                <div class="col-lg-6">
+                                    <label for="id_date_of_foundation">سال تاسیس</label>
+                                    {% render_field form.date_of_foundation class+="w-100" %}
+                                    {% render_field form.date_of_foundation.errors %}
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-lg-12">
+                                    <label for="id_research_field">حوزه فعالیت</label>
+                                    {% render_field form.research_field class+="w-100" %}
+                                    {% render_field form.research_field.errors %}
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-lg-12 rankDiv">
+                                    <label class="rankLabel" for="id_industry_type">نوع شرکت</label>
+                                    <select id="id_industry_type" name="industry_type" class="w-100">
+                                        <option selected dir="rtl">انتخاب کنید ...</option>
+                                        <option value="1">دولتی</option>
+                                        <option value="2">خصوصی</option>
+                                    </select>
+                                    {% render_field form.industry_type.errors %}
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-lg-12">
+                                    <label for="id_industry_address">نشانی</label>
+                                    {% render_field form.industry_address class+="w-100" rows="3" dir="rtl" %}
+                                    {% render_field form.industry_address.errors %}
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-lg-6">
+                                    <label for="id_phone_number">تلفن</label>
+                                    {% render_field form.phone_number class+="w-100" %}
+                                    {% render_field form.phone_number.errors %}
+                                </div>
+                                <div class="col-lg-6">
+                                    <label for="id_email_address">پست الکترونیکی</label>
+                                    {% render_field form.email_address class+="w-100" %}
+                                    {% render_field form.email_address.errors %}
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card-footer">
+                            <button class="save-btn" type="submit">ذخیره</button>
                         </div>
                     </div>
-                    <div class="row">
-                        <div class="col-lg-6">
-                            <label for="id_registration_number">شماره ثبت</label>
-                            {% render_field form.registration_number class+="w-100" %}
-                            {% render_field form.registration_number.errors %}
-                        </div>
-                        <div class="col-lg-6">
-                            <label for="id_date_of_foundation">سال تاسیس</label>
-                            {% render_field form.date_of_foundation class+="w-100" %}
-                            {% render_field form.date_of_foundation.errors %}
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-6">
-                    <div class="row">
-                        <div class="col-lg-12">
-                            <label for="id_research_field">حوزه فعالیت</label>
-                            {% render_field form.research_field class+="w-100" %}
-                            {% render_field form.research_field.errors %}
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-lg-12 rankDiv">
-                            <label class="rankLabel" for="id_industry_type">نوع شرکت</label>
-                            <select id="id_industry_type" name="industry_type">
-                                <option selected dir="rtl">انتخاب کنید ...</option>
-                                <option value="1">دولتی</option>
-                                <option value="2">خصوصی</option>
-                            </select>
-                            {% render_field form.industry_type.errors %}
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-lg-12">
-                            <label for="id_industry_address">نشانی</label>
-                            {% render_field form.industry_address class+="w-100" rows="3" dir="rtl" %}
-                            {% render_field form.industry_address.errors %}
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-lg-6">
-                            <label for="id_phone_number">تلفن</label>
-                            {% render_field form.phone_number class+="w-100" %}
-                            {% render_field form.phone_number.errors %}
-                        </div>
-                        <div class="col-lg-6">
-                            <label for="id_email_address">پست الکترونیکی</label>
-                            {% render_field form.email_address class+="w-100" %}
-                            {% render_field form.email_address.errors %}
-                        </div>
-                    </div>
-                </div>
+                </form>
             </div>
-            <input type="submit" class="form-submit" value="ثبت اطلاعات"/>
-        </form>
     </div>
 </div>
