added status field
added status field to IndustryUser model also an if condition to blur the main div in base layout with respect to the user's status

--- a/industry/templates/industry/index.html
+++ b/industry/templates/industry/index.html
@@ -3,7 +3,7 @@
 {% block title %}پروژه ها{% endblock %}
 
 {% block dialog%}
-    {% if user.industryuser.first_login %}
+    {% if user.industryuser.status == 'signed_up' %}
         {% include 'industry/layouts/initial_information.html' %}
     {% endif %}
     {% include 'industry/layouts/showProject.html' %}
