--- a/expert/templates/expert/layouts/initial_information.html
+++ b/expert/templates/expert/layouts/initial_information.html
@@ -1,6 +1,6 @@
 {% load static %}
 {% load widget_tweaks %}
-<div class="fixed-back initial-information"{% if first_time %} style="display: block" {% endif %}>
+<div class="fixed-back initial-information"{% if expert_user.status == "signed_up" %} style="display: block" {% endif %}>
     <div class="card text-right">
         <div class="card-head">اطلاعات اولیه</div>
         <div class="container">
