--- a/expert/templates/expert/layouts/initial_information.html
+++ b/expert/templates/expert/layouts/initial_information.html
@@ -4,7 +4,7 @@
     <div class="card text-right">
         <div class="card-head">اطلاعات اولیه</div>
         <div class="container">
-            <form action="{% url 'expert:index' %}" method="post" novalidate>
+            <form enctype="multipart/form-data" action="{% url 'expert:index' %}" method="post" novalidate>
                 {% csrf_token %}
                 <div class="row">
                     <div class="col-lg-12">
@@ -15,7 +15,7 @@
                                 </label>
                                 <img src="{% static 'expert/img/profile.jpg' %}" alt="profile" class="profile"
                                      width="150px" height="150px">
-                                <input type="file" id="upload-input" accept="image/png, image/jpeg">
+                                <input type="file" id="upload-input" name="photo" accept="image/png, image/jpeg">
                             </div>
                         </div>
                         <div class="row">
