--- a/industry/templates/industry/index.html
+++ b/industry/templates/industry/index.html
@@ -3,9 +3,9 @@
 {% block title %}پروژه ها{% endblock %}
 
 {% block dialog%}
-    {#    {% if user.industryuser.first_login %}#}
+    {% if user.industryuser.status == 'signed_up' %}
         {% include 'industry/layouts/initial_information.html' %}
-{#    {% endif %}#}
+    {% endif %}
     {% include 'industry/layouts/showProject.html' %}
     {% include 'industry/layouts/vote_dialog.html' %}
 {% endblock %}
